# ChataTUI

./: .gitignore  Cargo.toml  README.md  onlyerrors.sh
credentials/: chatatui-4d0d6ebc5fb2.json  development
ctui_backend/: go.mod  go.sum  main.go
ctui_backend/configs/: chatatui_messender_api.yaml
ctui_backend/db/: bboltDB.go  chatroom.go  db.go  errors.go  user.go
ctui_backend/router/: errors.go  routes.go
ctui_backend/token/: token.go  token_test.go
ctui_backend/ws/: client.go  ws.go
src/: ctui.rs  lib.rs  main.rs
src/api/: chatroom_handler.rs  endpoints.rs  errors.rs  mod.rs  request_handlers.rs  ws.rs
src/ffi/: go.rs
src/tui/: errors.rs  input.rs  mod.rs
