[package]
name = "chatatui"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chatatui"
path = "./src/main.rs"

[dependencies]
libc = "0.2.147"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"]}
